--- a/Unofficial Open Kasi SDK/OpenKasi.Unofficial.SDK/OpenKasi.Unofficial.SDK.csproj
+++ b/Unofficial Open Kasi SDK/OpenKasi.Unofficial.SDK/OpenKasi.Unofficial.SDK.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.1</Version>
+    <Description>The Unofficial Open Kasi .NET SDK</Description>
+    <Authors>Open Kasi</Authors>
+    <Company>Open Kasi Pty Ltd</Company>
+    <Product>OpenKasi Unofficial SDK</Product>
+    <PackageProjectUrl>https://github.com/openkasidevelopers/Unofficial-Open-Kasi-SDK</PackageProjectUrl>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>C:\Users\Jason\Source\Repos\openkasidevelopers\Unofficial-Open-Kasi-SDK\Unofficial Open Kasi SDK\OpenKasi.Unofficial.SDK\OpenKasi.Unofficial.SDK.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
